modify nav and banner and styled in footer

--- a/src/components/Screens/Banner/Banner.css
+++ b/src/components/Screens/Banner/Banner.css
@@ -3,14 +3,22 @@
     align-items: center;
     height: 70vh;
 }
-.banner-bg{
-    height: 100vh;
-    background-image: url("https://source.unsplash.com/random/900×700/?biology");
+.banner-bg-side{
+    height: 80vh;
+    background-image: url('../../../source/img/bg/bg.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    color:#fcfcfc;
 
+}
+.banner-bg{
+height: 80vh;
+background: #afaea3;
+}
+.left-side-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner-auth li {
