--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -5,7 +5,7 @@
 }
 
 .brand-logo {
-    font-family: fantasy;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: #333;
     font-weight: bolder;
