added lightbox slider

--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -13,7 +13,7 @@
 }
 
 header{
-    position: fixed;
+position: sticky;
     top: 0; left: 0; right: 0;
     background: #ffffff;
     box-shadow: 0 5px 10px rgba(0,0,0,.1);
@@ -48,6 +48,16 @@ header{
     text-decoration: none;
 }
 
+.inner-ul div div li a{
+    font-size: 1rem;
+    padding: 10px;
+    color: #333;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
 
 
 .language{
@@ -56,10 +66,17 @@ header{
 
 }
 
-.navigation ul li a:hover{
+/* .navigation ul .first-list a:hover{
     background: #333;
     color: #ffffff;
     border-radius: 2rem;
+} */
+
+.inner-ul div div li a:hover{
+    color:#8a260d;
+    text-decoration: underline;
+    padding:15px;
+    font-weight: bold;
 }
 
 .navigation ul li ul{
@@ -67,7 +84,6 @@ header{
     left: 0;
     width: 600px;
     background: #fff;
-
     display: none;
 }
 
@@ -126,8 +142,8 @@ header label{
         width: 100%;
     }
 
-    .navigation ul li li{
-        margin-top:5rem
+    .navigation ul li ul li{
+        margin-top:0.5rem
     }
 
     .item-flex{
